@@ -6,67 +6,170 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.env.Environment;
 
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.config.oauth2.client.CommonOAuth2Provider;
 
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.AuthorityUtils;
+
+import org.springframework.security.config.web.PathPatternRequestMatcherBuilderFactoryBean;
 import org.springframework.security.oauth2.client.InMemoryOAuth2AuthorizedClientService;
 import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
 
-import org.springframework.security.oauth2.client.endpoint.DefaultAuthorizationCodeTokenResponseClient;
 
-import org.springframework.security.oauth2.client.endpoint.OAuth2AccessTokenResponseClient;
-import org.springframework.security.oauth2.client.endpoint.OAuth2AuthorizationCodeGrantRequest;
 
 import org.springframework.security.oauth2.client.registration.ClientRegistration;
 import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
 import org.springframework.security.oauth2.client.registration.InMemoryClientRegistrationRepository;
 
-import org.springframework.security.oauth2.client.web.AuthorizationRequestRepository;
-import org.springframework.security.oauth2.client.web.HttpSessionOAuth2AuthorizationRequestRepository;
+import org.springframework.security.oauth2.client.web.AuthenticatedPrincipalOAuth2AuthorizedClientRepository;
 
 
-import org.springframework.security.oauth2.config.annotation.web.configuration.EnableResourceServer;
-import org.springframework.security.oauth2.config.annotation.web.configuration.ResourceServerConfigurerAdapter;
-import org.springframework.security.oauth2.core.endpoint.OAuth2AuthorizationRequest;
-import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
+import org.springframework.security.oauth2.client.web.OAuth2AuthorizedClientRepository;
+
+import org.springframework.security.web.SecurityFilterChain;
+
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
-import org.springframework.stereotype.Component;
-import org.springframework.web.multipart.commons.CommonsMultipartResolver;
+import org.springframework.web.multipart.support.StandardServletMultipartResolver;
 
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.util.Arrays;
+
 import java.util.List;
-import java.util.Set;
+
 import java.util.stream.Collectors;
+
+
 
 /**
  * Created by jthota on 11/12/2019.
  */
-
+@Configuration
 @EnableWebSecurity
 @PropertySource("classpath:application.properties")
-
-public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
-   public static final Boolean REQUIRE_AUTHENTICATION=false;
+public class SecurityConfiguration  {
+    @Autowired
+    private Environment env;
+    public static final Boolean REQUIRE_AUTHENTICATION=false;
     public static final int GUEST_ACCOUNT_ID=1888;
+    private final static String CLIENT_PROPERTY_KEY = "spring.security.oauth2.client.registration.";
 
-    private static List<String> clients = Arrays.asList("google");
+    private final static List<String> clients = List.of("google");
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        if (SecurityConfiguration.REQUIRE_AUTHENTICATION) {
+            http
+                    .authorizeHttpRequests(authorize -> authorize
+                            .requestMatchers("/", "/home", "/logout", "/oauth_login", "/common/**", "/data/requestAccount", "/loginFailure", "/images/**").permitAll()
+                            .anyRequest().authenticated()
+                    ).oauth2Login(auth2->auth2
+                            .loginPage("/loginSuccessPage")
+                            .failureUrl("/loginFailure")
+                            .defaultSuccessUrl("/loginSuccessPage", true)
+                            .clientRegistrationRepository(clientRegistrationRepository())
+                            .authorizedClientService(authorizedClientService(clientRegistrationRepository()))
+                            .authorizationEndpoint(authorization->authorization.baseUri("/login")))
+                    .logout(logout -> logout
+                            .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
+                                    .logoutSuccessUrl("/") // Redirect after logout
+                                    .invalidateHttpSession(true) // Invalidate the session
+                                    .deleteCookies("JSESSIONID") // Delete cookies
+                    ).csrf(csrf->csrf.csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()));
 
-    /*   @Autowired
-    public void configureGlobalSecurity(AuthenticationManagerBuilder auth) throws Exception {
-        auth.inMemoryAuthentication().withUser("bill").password("abc123").roles("USER");
-        auth.inMemoryAuthentication().withUser("admin").password("root123").roles("ADMIN");
-        auth.inMemoryAuthentication().withUser("dba").password("root123").roles("ADMIN","DBA");//dba have two roles.
+        }else{
+            http
+                    .authorizeHttpRequests(authorize -> authorize
+                            .anyRequest().permitAll()
+                    ).oauth2Login(auth2-> auth2
+                            .loginPage("/loginSuccessPage")
+                            .failureUrl("/loginFailure")
+                            .defaultSuccessUrl("/loginSuccessPage", true)
+                            .clientRegistrationRepository(clientRegistrationRepository())
+                            .authorizedClientService(authorizedClientService(clientRegistrationRepository()))
+                            .authorizationEndpoint(authorization->authorization.baseUri("/login"))
+                    )
+                    .logout(logout -> logout
+                                    .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
+                                    .logoutSuccessUrl("/") // Redirect after logout
+                                    .invalidateHttpSession(true) // Invalidate the session
+                                    .deleteCookies("JSESSIONID") // Delete cookies
+                            // Add a LogoutSuccessHandler if needed for custom logic
+                    ).csrf(csrf->csrf.csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()));
+        }
+        http.headers(headers->headers.cacheControl(HeadersConfigurer.CacheControlConfig::disable));
+        return http.build();
     }
-    */
+
+//    protected void configure(HttpSecurity http) throws Exception {
+//        if (SecurityConfiguration.REQUIRE_AUTHENTICATION) {
+//            http.authorizeRequests()
+//                    .antMatchers("/","/home", "/logout", "/oauth_login", "/common/**", "/data/requestAccount", "/loginFailure", "/images/**").permitAll()
+//                    .anyRequest().authenticated()
+//                    .and()
+//                    .logout()
+//                    .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
+//                    .logoutSuccessUrl("/")
+//                    .deleteCookies("JSESSIONID")
+//                    .invalidateHttpSession(true)
+//                    .permitAll()
+//                    .and()
+//                    .csrf().csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+//                    .and()
+//                    .oauth2Login()
+//                    .loginPage("/loginSuccessPage")
+//                    .permitAll()
+//                    .defaultSuccessUrl("/loginSuccessPage", true)
+//                    .failureUrl("/loginFailure")
+//                    .clientRegistrationRepository(clientRegistrationRepository())
+//                    .authorizedClientService(authorizedClientService())
+//                    .authorizationEndpoint()
+//                    .baseUri("/login")
+//                    .and()
+//                    .tokenEndpoint()
+//                    .accessTokenResponseClient(accessTokenResponseClient())
+//
+//            ;
+//
+//        }else {
+//            http.authorizeRequests()
+//                    .antMatchers("**").permitAll()
+//                    .anyRequest().authenticated()
+//                    .and()
+//                    .logout()
+//                    .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
+//                    .logoutSuccessUrl("/")
+//                    .deleteCookies("JSESSIONID")
+//                    .invalidateHttpSession(true)
+//                    .permitAll()
+//                    .and()
+//                    .csrf().csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+//                    .and()
+//                    .oauth2Login()
+//                    .loginPage("/loginSuccessPage")
+//                    .permitAll()
+//                    //    .successHandler(successHandler())
+//                    .defaultSuccessUrl("/loginSuccessPage", true)
+//                    .failureUrl("/loginFailure")
+//                    .clientRegistrationRepository(clientRegistrationRepository())
+//                    .authorizedClientService(authorizedClientService())
+//                    .authorizationEndpoint()
+//                    .baseUri("/login")
+//                    .and()
+//                    .tokenEndpoint()
+//                    .accessTokenResponseClient(accessTokenResponseClient())
+//
+//            ;
+
+//        }
+//
+//
+//
+//
+//        http.headers().defaultsDisabled().cacheControl();
+
+//    }
 
     @Bean
     public ClientRegistrationRepository clientRegistrationRepository() {
@@ -77,101 +180,6 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 
         return new InMemoryClientRegistrationRepository(registrations);
     }
-
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        if (SecurityConfiguration.REQUIRE_AUTHENTICATION) {
-            http.authorizeRequests()
-                    .antMatchers("/","/home", "/logout", "/oauth_login", "/common/**", "/data/requestAccount", "/loginFailure", "/images/**").permitAll()
-                    .anyRequest().authenticated()
-                    .and()
-                    .logout()
-                    .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
-                    .logoutSuccessUrl("/")
-                    .deleteCookies("JSESSIONID")
-                    .invalidateHttpSession(true)
-                    .permitAll()
-                    .and()
-                    .csrf().csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
-                    .and()
-                    .oauth2Login()
-                    .loginPage("/loginSuccessPage")
-                    .permitAll()
-                    .defaultSuccessUrl("/loginSuccessPage", true)
-                    .failureUrl("/loginFailure")
-                    .clientRegistrationRepository(clientRegistrationRepository())
-                    .authorizedClientService(authorizedClientService())
-                    .authorizationEndpoint()
-                    .baseUri("/login")
-                    .and()
-                    .tokenEndpoint()
-                    .accessTokenResponseClient(accessTokenResponseClient())
-
-            ;
-
-        }else {
-            http.authorizeRequests()
-                    .antMatchers("**").permitAll()
-                    .anyRequest().authenticated()
-                    .and()
-                    .logout()
-                    .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
-                    .logoutSuccessUrl("/")
-                    .deleteCookies("JSESSIONID")
-                    .invalidateHttpSession(true)
-                    .permitAll()
-                    .and()
-                    .csrf().csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
-                    .and()
-                    .oauth2Login()
-                    .loginPage("/loginSuccessPage")
-                    .permitAll()
-                    //    .successHandler(successHandler())
-                    .defaultSuccessUrl("/loginSuccessPage", true)
-                    .failureUrl("/loginFailure")
-                    .clientRegistrationRepository(clientRegistrationRepository())
-                    .authorizedClientService(authorizedClientService())
-                    .authorizationEndpoint()
-                    .baseUri("/login")
-                    .and()
-                    .tokenEndpoint()
-                    .accessTokenResponseClient(accessTokenResponseClient())
-
-            ;
-
-        }
-
-
-
-
-        http.headers().defaultsDisabled().cacheControl();
-
-    }
-    @Bean
-    public AuthenticationSuccessHandler successHandler(){
-        return new SecurityHandler();
-    }
-    @Bean
-    public OAuth2AuthorizedClientService authorizedClientService() {
-
-        return new InMemoryOAuth2AuthorizedClientService(
-                clientRegistrationRepository());
-    }
-    @Bean
-    public AuthorizationRequestRepository<OAuth2AuthorizationRequest> authorizationRequestRepository() {
-        return new HttpSessionOAuth2AuthorizationRequestRepository();
-    }
-
-    @Bean
-    public OAuth2AccessTokenResponseClient<OAuth2AuthorizationCodeGrantRequest> accessTokenResponseClient() {
-        return new DefaultAuthorizationCodeTokenResponseClient();
-    }
-
-    private static String CLIENT_PROPERTY_KEY
-            = "spring.security.oauth2.client.registration.";
-
-    @Autowired
-    private Environment env;
 
     private ClientRegistration getRegistration(String client) {
         String clientId = env.getProperty(
@@ -191,26 +199,26 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 
         return null;
     }
-
-    @Configuration
-    @EnableResourceServer
-    protected static class ResourceServerConfiguration extends ResourceServerConfigurerAdapter {
-        @Override
-        public void configure(HttpSecurity http) throws Exception {
-            // @formatter:off
-            http.antMatcher("/me").authorizeRequests().anyRequest().authenticated();
-            // @formatter:on
-
-            /*   http
-                    .authorizeRequests()
-                    .antMatchers("/scge/**").authenticated()
-                    .antMatchers("/").permitAll();*/
-        }
+    @Bean
+    public OAuth2AuthorizedClientService authorizedClientService(
+            ClientRegistrationRepository clientRegistrationRepository) {
+        return new InMemoryOAuth2AuthorizedClientService(clientRegistrationRepository);
     }
+
+    @Bean
+    public OAuth2AuthorizedClientRepository authorizedClientRepository(
+            OAuth2AuthorizedClientService authorizedClientService) {
+        return new AuthenticatedPrincipalOAuth2AuthorizedClientRepository(authorizedClientService);
+    }
+//    @Bean
+//    public OAuth2AccessTokenResponseClient<OAuth2AuthorizationCodeGrantRequest> accessTokenResponseClient() {
+//        return new DefaultAuthorizationCodeTokenResponseClient();
+//    }
+
     @Bean(name = "filterMultipartResolver")
-    public CommonsMultipartResolver multipartResolver() {
-        CommonsMultipartResolver multipartResolver = new CommonsMultipartResolver();
-        multipartResolver.setMaxUploadSize(100000000);
+    public StandardServletMultipartResolver multipartResolver() {
+        StandardServletMultipartResolver multipartResolver = new StandardServletMultipartResolver();
+        //  multipartResolver.setMaxUploadSize(100000000);
         return multipartResolver;
     }
 }
